--- a/app/src/main/res/layout/item_add_destination.xml
+++ b/app/src/main/res/layout/item_add_destination.xml
@@ -6,17 +6,18 @@
     android:layout_height="wrap_content">
 
 
-    <ImageView
+    <TextView
         android:id="@+id/black"
-        android:layout_width="wrap_content"
+        android:text="1"
+        android:textSize="25sp"
+        android:layout_width="35dp"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/edit3"
         android:layout_alignBottom="@+id/edit3"
         android:layout_marginTop="2dp"
-        android:src="@drawable/ic_down"
-        android:scaleY="1.5"
-        app:tint="#5E424242" />
+        android:textColor="#5E424242" />
 
     <EditText
         android:layout_alignParentTop="true"
@@ -38,6 +39,17 @@
         android:tint="@color/purple_500"
 android:layout_alignParentEnd="true"
     />
+    <ImageButton
+        android:backgroundTint="#FAF1A1"
+        android:id="@+id/moveBtn"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/edit2"
+        android:layout_alignBottom="@+id/edit2"
+        android:src="@drawable/ic_move"
+        android:tint="@color/purple_500"
+        android:layout_alignParentEnd="true"
+        />
 
 
 </RelativeLayout>
